cabal-version:      3.0
name:               require-callstack
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             parsonsmatt
maintainer:         parsonsmatt@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        RequireCallStack
        RequireCallStack.Internal
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >= 4.12
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite require-callstack-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        require-callstack
